--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -302,7 +302,7 @@
         padding-left: 25px;
         font-size: 14px;
         line-height: 20px;
-        display: block;
+        display: inline-block;
         position: relative;
         &::after {
           content: '';
@@ -639,7 +639,49 @@
 .xc-body {
   color: #999;
   font-size: 16px;
+  .course-class-item {
+    color: #333;
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 20px;
 
+    .course-class-name {
+      margin-bottom: 5px;
+    }
+
+    .course-class-pro {
+      display: table-cell;
+      overflow: hidden;
+      text-align: center;
+      font-size: 12px;
+      width: 220px;
+
+      .course-pro-warp {
+        width: 180px;
+        height: 6px;
+        background-color: #e5e5e5;
+        float: left;
+        border-radius: 6px;
+        margin-top: 6px;
+
+        .course-pro-inner {
+          height: 100%;
+          border-radius: 6px;
+          width: 71.42%;
+          background-color: #0085e6;
+        }
+      }
+
+      .course-pro-test {
+        float: right;
+        line-height: 17px;
+
+        span {
+          color: #0085e6;
+        }
+      }
+    }
+  }
   .xc-container {
     width: 1200px;
     margin: 0 auto;
@@ -1189,49 +1231,6 @@
       }
     }
   }
-  .course-class-item {
-    color: #333;
-    font-size: 16px;
-    line-height: 22px;
-    margin-bottom: 20px;
-
-    .course-class-name {
-      margin-bottom: 5px;
-    }
-
-    .course-class-pro {
-      display: table-cell;
-      overflow: hidden;
-      text-align: center;
-      font-size: 12px;
-      width: 220px;
-
-      .course-pro-warp {
-        width: 180px;
-        height: 6px;
-        background-color: #e5e5e5;
-        float: left;
-        border-radius: 6px;
-        margin-top: 6px;
-
-        .course-pro-inner {
-          height: 100%;
-          border-radius: 6px;
-          width: 71.42%;
-          background-color: #0085e6;
-        }
-      }
-
-      .course-pro-test {
-        float: right;
-        line-height: 17px;
-
-        span {
-          color: #0085e6;
-        }
-      }
-    }
-  }
 }
 
 .readText-footer-box {
@@ -1440,4 +1439,361 @@
       margin-left: 5px;
     }
   }
+}
+.intelText-box {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
+  position: relative;
+  padding: 16px 30px;
+  margin-bottom: 15px;
+  .intelText-head-name {
+    line-height: 28px;
+    font-size: 20px;
+    color: #0085e6;
+  }
+  .intelText-close {
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    right: 30px;
+    top: 10px;
+  }
+  .intelText-classes-box {
+    line-height: 60px;
+    font-size: 18px;
+    border-bottom: 1px solid rgba(235, 235, 235, 1);
+    overflow: hidden;
+    .intelText-classes {
+      display: inline-block;
+      position: relative;
+      .intelText-line{
+        position: absolute;
+        content: '';
+        left: 0;
+        bottom: 0;
+        width: 80px;
+        height: 6px;
+        border-radius: 3px;
+        background-color: #0085e6;
+        cursor: pointer;
+        transition: all linear 0.2s;
+      }
+      .intelText-class {
+        display: inline-block;
+        padding: 0 5px;
+        text-align: center;
+        margin-right: 30px;
+        cursor: pointer;
+        &.active {
+          color: #0085e6;
+        }
+      }
+    }
+    .intelText-classes-des {
+      display: inline-block;
+      float: right;
+      color: #666666;
+      font-size: 14px;
+      .intelText-classes-score {
+        display: inline-block;
+        font-size: 18px;
+        margin-left: 30px;
+        .intelText-classes-score-num {
+          color: #0085e6;
+        }
+      }
+    }
+  }
+  .intelText-classNum {
+    margin-top: 20px;
+    padding-left: 20px;
+    .intelText-classNum-items {
+      cursor: pointer;
+      display: inline-block;
+      line-height: 30px;
+      font-size: 16px;
+      text-align: center;
+      width: 70px;
+      &.active {
+        color: #0085e6;
+      }
+    }
+  }
+}
+.intelText-footer {
+  line-height: 64px;
+  font-size: 14px;
+  color: #999999;
+  background-color: #fff;
+  box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, 0.05);
+  .intelText-footer-item {
+    display: inline-block;
+  }
+  .intelText-footer-timeImg {
+    width: 20px;
+    height: 20px;
+    vertical-align: top;
+    margin-top: 22px;
+    margin-right: 10px;
+  }
+  .intelText-footer-time {
+    font-size: 30px;
+    color: #333333;
+    margin: 0 30px 0 5px;
+    vertical-align: top;
+  }
+  .intelText-footer-btns {
+    display: inline-block;
+    float: right;
+    .intelText-footer-btn {
+      display: inline-block;
+      float: left;
+      width: 148px;
+      text-align: center;
+      font-size: 20px;
+      background: rgba(250, 250, 251, 1);
+      &:first-child {
+        border-right: 1px solid rgba(235, 235, 2351);
+      }
+      .intelText-footer-link {
+        font-size: 20px;
+        color: #666;
+        display: block;
+      }
+      &.active {
+        background-color: #0085e6;
+        .intelText-footer-link {
+          color: #fff;
+          font-weight: 600;
+        }
+      }
+    }
+  }
+}
+.xc-body .intelText-blan-item {
+  padding: 30px;
+  font-size: 14px;
+  color: rgba(102, 102, 102, 1);
+  line-height: 28px;
+  border-radius: 4px;
+  border: 1px solid rgba(235, 235, 235, 1);
+  & + .intelText-blan-item  {
+    margin-top: 10px;
+  }
+  .intelText-blan-div {
+    display: inline-block;
+    border-bottom: 2px solid #0085e6;
+    margin: 0 5px;
+    .intelText-blan-input {
+      background: none;
+      border: none;
+      text-align: center;
+      color: #333333;
+      width: 124px;
+      outline: none;
+      line-height: 22px;
+    }
+  }
+}
+.xc-readCom-box {
+  display: flex;
+  .xc-readCom-paragraph {
+    font-size: 14px;
+    line-height: 30px;
+    text-indent: 28px;
+    .xc-readCom-paragraph-div {
+      display: inline-block;
+      border-bottom: 2px solid #0085e6;
+      margin: 0 5px;
+      text-indent: 0;
+      .xc-readCom-paragraph-input {
+        background: none;
+        border: none;
+        text-align: center;
+        color: #333333;
+        width: 100px;
+        outline: none;
+        line-height: 22px;
+      }
+    }
+    & + .xc-readCom-paragraph {
+      margin-top: 30px;
+    }
+  }
+  .xc-readCom {
+    flex: 1;
+    margin-right: 10px;
+    border-radius: 4px;
+    border: 1px solid rgba(235, 235, 235, 1);
+    padding: 30px 36px 36px 20px;
+    .intelText-blan-item {
+      padding: 0;
+      border: none;
+      & > div {
+        margin-bottom: 10px;
+      }
+    }
+  }
+  .xc-readCom-answer {
+    border-radius: 4px;
+    flex: 1;
+    border: 1px solid rgba(235, 235, 235, 1);
+    padding: 30px 36px 36px 20px;
+    font-size: #666666;
+    .xc-coustom-pent {
+      border: none;
+      .coustom-pent-head {
+        padding: 0;
+        background: none;
+        font-weight: 600;
+      }
+      .coustom-pent-body {
+        padding: 0;
+        .label {
+          margin-top: 5px;
+        }
+      }
+      & + .xc-coustom-pent {
+        margin-top: 5px;
+      }
+    }
+  }
+  .xc-readCom-inputs {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .xc-readCom-input {
+    font-size: 14px;
+    margin-right: 8px;
+    margin-bottom: 10px;
+    display: inline-block;
+    .readCom-input {
+      border: 1px solid rgba(215, 215, 215, 1);
+      line-height: 24px;
+      border-radius: 18px;
+      color: #333333;
+      background: none;
+      outline: none;
+      padding: 0;
+      margin: 0;
+      width: 95px;
+      margin-left: 3px;
+      text-align: center;
+    }
+  }
+  .xc-readCom-answers {
+    color: #333333;
+    line-height: 32px;
+    margin-top: 20px;
+  }
+  .xc-readCom-answer-item {
+    font-size: 14px;
+    color: #666666;
+    .answer-item-input {
+      width: 88px;
+      line-height: 23px;
+      background: none;
+      outline: none;
+      border: 1px solid rgba(215, 215, 215, 1);
+      border-radius: 18px;
+      text-align: center;
+      margin: 10px 0;
+      color: #0085e6;
+    }
+    label {
+      display: block;
+      & + label {
+        margin-top: 15px;
+      }
+    }
+  }
+}
+.xc-readCom-lists {
+  line-height: 30px;
+  color: #333333;
+  font-size: 16px;
+  font-weight: 600;
+  .xc-readCom-list {
+    & + .xc-readCom-list {
+      margin-top: 20px;
+    }
+  }
+  .xc-readCom-list-div {
+    display: inline-block;
+    border-bottom: 2px solid #0085e6;
+    text-indent: 0;
+  }
+  .xc-readCom-list-input {
+    background: none;
+    border: none;
+    color: #333333;
+    width: 140px;
+    outline: none;
+    line-height: 22px;
+    text-indent: 5px;
+    font-weight: 600;
+  }
+  .xc-readCom-list-num {
+    display: inline-block;
+    width: 20px;
+  }
+}
+.xc-proplay {
+  overflow: hidden;
+  line-height: 50px;
+  .xc-proplay-btns {
+    float: left;
+    .xc-proplay-img {
+      width: 50px;
+      height: 50px;
+    }
+  }
+  .xc-proplay-box {
+    float: right;
+    margin: 5px 0;
+    .xc-proplay-outher {
+      display: inline-block;
+      width: 917px;
+      height: 6px;
+      background: rgba(235, 235, 235, 1);
+      border-radius: 3px;
+      margin: 0 5px;
+      vertical-align: top;
+      margin-top: 22px;
+      .xc-proplay-inner {
+        height: 100%;
+        background-color: #0085e6;
+        border-radius: 3px;
+      }
+    }
+    .xc-proplay-time {
+      color: #0085e6;
+      font-size: 14px;
+    }
+  }
+}
+.xc-realText {
+  padding-bottom: 0px;
+}
+.xc-yellow {
+  color: #FFC74E;
+}
+.xc-center {
+  text-align: center;
+}
+.xc-blue {
+  color: #0085e6;
+}
+.xc-error {
+  color: red;
+}
+.xc-pdl30 {
+  padding-left: 35px !important;
+}
+.xc-des {
+  color: #999;
+  margin: 5px 0;
 }
